# dispatch

./: .gitignore  BUG_REPORT.md  CLAUDE.md  LICENSE  POSTMORTEMS.md  README.md  SMOKE_TESTS.md  architecture.html  claude.md  config.example.yaml  pyproject.toml
.github/workflows/: pages.yml
apps/chat-viewer/: main.py  pyproject.toml  server.py  start.sh
apps/dispatch-app/: .gitignore  CLAUDE.md  app.config.ts  package-lock.json  package.json
apps/skills-browser/: CLAUDE.md  app.py  cli.py  main.py  pyproject.toml
apps/sven-ios/: .gitignore  ExportOptions.plist  (+1 more)
assistant/: auth_dialog.py  backends.py  bus_helpers.py  cli.py  common.py  config.py  discord_listener.py  health.py  manager.py  perf.py  quota_manager.py  readers.py  reminders.py  sdk_backend.py  sdk_session.py  transcript.py  tweet_consumer.py
bus/: bus.py  cli.py  consumers.py  search.py
config/: global-settings.json
docs/: BUG_REPORT.md  DAEMON_PERF.md  IOS_DEVELOPMENT.md  MESSAGING_REFACTOR.md  NIKHIL_VOICE_NOTES.md  PUSH_NOTIFICATIONS_PLAN.md  SVEN_APP_REPO_PLAN.md  architecture-summary.md  per-chat-model-config.md  plan-sqlalchemy-fts.md  plan-structured-facts.md  plan-travel-intelligence.md  sven-app-recording-ui-plan.md  sven-hegel-comparison-report.md  transcript-migration-plan.md
launchd/: com.dispatch.claude-assistant.plist.example  com.dispatch.claude-menubar.plist.example  com.dispatch.watchdog.plist.example  com.nicklaude.claude-assistant.plist.example  com.nicklaude.claude-menubar.plist.example
menubar/: CLAUDE.md  app.py
plans/: agents-page.md  bus-consumer-injection.md  chat-page.md  command-center-dashboard.md
prototypes/claude-assistant-rs/: Cargo.toml
prototypes/claude-assistant-rs/src/: config.rs  contacts.rs  error.rs  health.rs  lib.rs  main.rs  messages.rs  registry.rs  reminder.rs  session.rs
prototypes/claude-assistant-rs/tests/: integration_test.rs
scripts/: fact  migrate_transcripts.py  nightly-consolidation.sh  setup-nightly-tasks.py
site/: Gemfile  _config.yml  index.html  index.md  package-lock.json  package.json  vite.config.js
skills/: hf-cli  pocket-sven  skills-lock.json
templates/: CLAUDE.global.md  SOUL.md
tests/: __init__.py  conftest.py  test_backends.py  test_bus.py  test_bus_helpers.py  test_bus_integration.py  test_child_supervisor.py  test_consumers.py  test_haiku_prompt_retro.py  test_health_checks.py  test_message_consumer.py  test_message_routing.py  test_model_switching.py  test_performance.py  test_quota_manager.py  test_registry.py  test_restart_notify.py  test_session_lifecycle.py  test_stability_fixes.py  test_steering.py  test_steering_integration.py  test_steering_unit.py  test_steering_v2.py  test_sven_app.py  test_write_ahead_queue.py
tools/: test-read  test-send
visualizations/: bus-dashboard.html
(+620 files in other folders)
