[package]
name = "claude-assistant"
version = "0.1.0"
edition = "2021"
description = "Rust SMS assistant daemon - manages Claude sessions via tmux"

[dependencies]
# SQLite
rusqlite = { version = "0.33", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Cron scheduling
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Regex for health checks
regex = "1"
once_cell = "1"

# HTTP client (for search daemon health checks)
reqwest = { version = "0.12", features = ["json"] }

# Plist parsing (fallback for attributedBody)
plist = "1.8"

# Hex decoding (for tests)
hex = "0.4"

# File operations
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Directory paths
dirs = "5"

# Anyhow for error handling
anyhow = "1"
thiserror = "2"

[lib]
name = "claude_assistant_rs"
path = "src/lib.rs"

[dev-dependencies]
# Testing
proptest = "1"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "claude-assistant-rs"
path = "src/main.rs"
